# Shalrath

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  clang-tidy.sh  meson.build  resources.qrc  valgrind.suppr
.github/workflows/: build.yml  ci.yml  cmake-multi-platform.yml  formatting.yml  test.yml
resources/: CMakeLists.txt  meson.build  resources.qrc
src/: CMakeLists.txt  LeftPane.h  MainWindow.cpp  MainWindow.h  RightPane.cpp  RightPane.h  main.cpp  meson.build
src/Core/: CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.h  Shalrath.cpp  Shalrath.h
src/Database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  MapDao.cpp  MapDao.h  SQLManager.cpp  SQLManager.h  meson.build  schema.sql
src/Model/: CMakeLists.txt  Map.cpp  Map.h  meson.build
src/Network/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  INetworkClient.h  NetworkManager.cpp  NetworkManager.h  NetworkUtils.cpp  NetworkUtils.h  QuaddictedClient.cpp  QuaddictedClient.h  QuaddictedXMLParser.cpp  QuaddictedXMLParser.h  XMLParser.cpp  XMLParser.h  meson.build
src/Parser/: CMakeLists.txt  QuaddictedXMLParser.cpp  QuaddictedXMLParser.h  XMLParseException.h  meson.build
src/UI/: AsyncNetworkTaskUI.cpp  AsyncNetworkTaskUI.h  CMakeLists.txt  LeftPane.cpp  LeftPane.h  MainWindow.cpp  MainWindow.h  QuaddictedClient.cpp  QuaddictedClient.h  RightPane.cpp  RightPane.h  StatusBar.cpp  StatusBar.h  WelcomeDialog.cpp  WelcomeDialog.h  meson.build
subprojects/: googletest.wrap
subprojects/pugixml/: meson.build
tests/: CMakeLists.txt  DatabaseTests.cpp  NetworkTests.cpp  ParserTests.cpp  meson.build
tests/fixtures/: quaddicted_database.xml
